<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="@color/orange">


    <TextView
        android:id="@+id/text_longitude"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline72"
        app:layout_constraintTop_toTopOf="@+id/guideline78"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_latitude"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline78"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline72"
        app:layout_constraintTop_toTopOf="@+id/guideline22"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_avg_speed"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline22"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline72"
        app:layout_constraintTop_toTopOf="@+id/guideline76"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_duration"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline76"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline72"
        app:layout_constraintTop_toTopOf="@+id/guideline74"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_distance"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline74"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline72"
        app:layout_constraintTop_toTopOf="@+id/guideline75"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_start_date"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"

        app:layout_constraintBottom_toTopOf="@+id/guideline75"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline72"
        app:layout_constraintTop_toTopOf="@+id/guideline77"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/trail_delete"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/roboto"
        android:padding="0dp"
        android:shadowColor="#5C000000"
        android:shadowDy="4"
        android:shadowRadius="24"
        android:shape="rectangle"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:typeface="normal"
        android:shadowDx="0"
        app:strokeColor="@android:color/white"
        app:strokeWidth="2dp"
        android:text="@string/button_delete"
        app:layout_constraintBottom_toTopOf="@+id/guideline73"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline79"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/trail_share"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/roboto"
        android:padding="0dp"
        android:shadowColor="#5C000000"
        android:shadowDy="4"
        android:shadowRadius="24"
        android:shape="rectangle"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:typeface="normal"
        android:shadowDx="0"
        app:strokeColor="@android:color/white"
        app:strokeWidth="2dp"
        android:text="@string/button_share"
        app:layout_constraintBottom_toTopOf="@+id/guideline67"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline73" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="267dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="338dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="152dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline72"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline73"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="162dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline74"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="84dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline76"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="118dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline77"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline78"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="186dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline79"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="108dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline67"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="209dp" />

    <Button
        android:id="@+id/trail_select"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/roboto"
        android:padding="0dp"
        android:shadowColor="#5C000000"
        android:shadowDy="4"
        android:shadowRadius="24"
        android:shape="rectangle"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:typeface="normal"
        android:shadowDx="0"
        app:strokeColor="@android:color/white"
        app:strokeWidth="2dp"
        android:text="@string/select_trail"
        app:layout_constraintBottom_toTopOf="@+id/guideline79"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="60dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
